--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,9 @@ server:
   port: 8029
 spring:
   datasource:
-    url: jdbc:postgresql://192.168.1.154:5432/iho_develop
+    url: jdbc:postgresql://locahost:5432/postgres
     username: postgres
-    password: Cnhis.com@2021
+    password: postgres
     driver-class-name: org.postgresql.Driver
     hikari:
       maximum-pool-size: 80
